<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Factory</string>
	<string name="drawer_open">Drawer Opening</string>
	<string name="drawer_close">Drawer Closing</string>
	<string name="handle_exception">Application Appears Abnormity</string>
	<string name="no_permission_access">Permission Denied</string>
	<string name="parent_path">Up Directory</string>
	<string name="dialog_choose_this_file">Determine the choice of this file?</string>
	<string name="drawer_more">More</string>
	<string name="unpacking">Unpacking Kernel...</string>
	<string name="unpack_name">Kernel File</string>
	<string name="unpack_output_path">Output Path</string>
	<string name="unpack_mtk">MTK Platform Device</string>
	<string name="unpack_select">Select Kernel File</string>
	<string name="unpack_do">Do Unpack</string>
	<string name="about">This is a geek tool, suitable for ROM developers, seamless connection between the Android platform, custom ROM completed efficiently when various operations, support multi CPU, simple operation, easy to get started, the work to the mobile phone, the perfect fit!</string>
	<string name="feedback_contact">Contact Information</string>
	<string name="feedback_content">Feedback Content</string>
	<string name="feedback_send">Send Feedback</string>
	<string name="join_qq_group">Join QQ Group</string>
	<string name="show_source_page">Show Open-source Page</string>
	<string name="show_change_log">Show Change Log</string>
	<string name="keyname_workpath">workpath</string>
	<string name="keyname_clean_datas">clean_datas</string>
	<string name="backup_name">Backup Filename</string>
	<string name="backup_type">Backup Partition Type</string>
	<string name="backup_parttition_path">Backup Partition Path</string>
	<string name="backup_do">Do Backup</string>
	<string name="firmware_name">Firmware File</string>
	<string name="firmware_output_path">Output Path</string>
	<string name="firmware_type">Firmware Type</string>
	<string name="firmware_select">Select Frimware File</string>
	<string name="firmware_do">Do Decompress</string>
	<string name="repack_workspace">Repack Workspace</string>
	<string name="repack_output_file">Output Kernel File</string>
	<string name="repack_do">Do Repack</string>
	<string name="flash_name">Flash Kernel File</string>
	<string name="flash_parttion">Flash Partition Path</string>
	<string name="flash_type">Flash Type</string>
	<string name="flash_select">Select Kernel File</string>
	<string name="flash_do">Do Flash</string>
	<string name="flash_auto_reboot">Auto Reboot</string>
	<string name="imageconvert_from">IMG File</string>
	<string name="imageconvert_to">Converted Filename</string>
	<string name="imageconvert_select">Select IMG File</string>
	<string name="imageconvert_do">Do Convert</string>
	<string name="reboot_type">Reboot Type</string>
	<string name="reboot_do">Do Reboot</string>
	<string name="setting_base">Normal Setting</string>
	<string name="setting_workspace_path">Workspace Path</string>
	<string name="setting_workspace_path_summary">Application Datas Save Path</string>
	<string name="setting_workspace_path_new_workspace">Edit Workspace Path</string>
	<string name="setting_clean_datas">Clean Datas</string>
	<string name="setting_clean_datas_summary">Remove all files of this APP</string>
	<string name="setting_confirm_clean_datas">Really Clean Data(It will remove all files of this APP)?</string>
	<string name="update_current_version">Current Version:</string>
	<string name="update_newest_version">Newest Version:</string>
	<string name="update_content">Upgrade Content:</string>
	<string name="update_check">Check Update</string>
	<string name="update_now">Update Now</string>
	<string name="to_be_a_geek">To be a hot geek!</string>
	<string name="backuping">Backuping...</string>
	<string name="backup_success">Backuped Success</string>
	<string name="backup_failure">Backuped Failure</string>
	<string name="backuped_to">Backuped to:</string>
	<string name="choose_a_file">Choose A File</string>
	<string name="feedback_sending">Sending Feedback...</string>
	<string name="no_available_network">No Available Network</string>
	<string name="connect_to_server_failure">Cannot Conntect To Server</string>
	<string name="feedback_thanks">Thanks Your Feedback</string>
	<string name="firmware_decompressing">Decompressing Firmware...</string>
	<string name="firmware_decomressed_success">Decompressed Success</string>
	<string name="firmware_decompressed_failure">Decompressed Failure</string>
	<string name="firmware_decompressed_to">Decompressed To:</string>
	<string name="flashing">Fashing Kernel...</string>
	<string name="flash_success">Flashed Success</string>
	<string name="flash_kernel_from">Flashed Kernel From:</string>
	<string name="converting">Converting IMG...</string>
	<string name="converted_success">Converted Success</string>
	<string name="converted_failure">Converted Failure</string>
	<string name="converted_to">Converted IMG to:</string>
	<string name="repacking">Repacking Kernel...</string>
	<string name="repack_success">Repacked Success</string>
	<string name="repack_failure">Repacked Failure</string>
	<string name="repack_kernel_to">Repacked Kernel To:</string>
	<string name="unpacking">Unpacking Kernel...</string>
	<string name="unpack_success">Unpacked Success</string>
	<string name="unpack_failure">Unpacked Failure</string>
	<string name="unpack_kernel_to">Unpacked Kernel To:</string>
	<string name="update_checking">Checking Update...</string>
	<string name="update_check_failure">Checked Update Failure</string>
	<string name="parse_server_data_failure">Cannot Parse Server Datas</string>
	<string name="has_new_version">New Available Update</string>
	<string name="current_is_newest">Current Version Is Newest</string>
	<string name="start_upgrade">Start Upgrade</string>
	<string name="download_upgrade">Download Upgrade</string>
	<string name="connecting_to_file">Connecting To File...</string>
	<string name="downloading">Downloading</string>
	<string name="show_help">Show Help</string>
	<string name="help_content">This APP can normally run various functions, depending on whether the Workspace is correct, all the output directory is set to Workspace, the user can not specify the output, so that only to improve the stability of the program, you can go to the settings, the program will check most of the functions do not need ROOT permissions, the default does not request ROOT, security first. If there is a problem, please give me feedback.</string>
	<string name="convert_type">Convert Type</string>
	<string name="imageconvert_sdat2img_transfer_list">Select system.transfer.list</string>
	<string name="imageconvert_sdat2img_new_dat">Select system.new.dat</string>
	
</resources>


