<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	android:orientation="vertical"
	android:layout_marginLeft="10dp">

	<android.support.v7.widget.AppCompatTextView
		android:layout_height="wrap_content"
		android:text="@string/flash_name"
		android:layout_width="match_parent"
		android:layout_marginTop="10dp"/>

	<android.support.v7.widget.AppCompatEditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:singleLine="false"
		android:id="@+id/activity_flash_et_bootimg"/>

	<android.support.v7.widget.AppCompatTextView
		android:layout_height="wrap_content"
		android:text="@string/flash_type"
		android:layout_width="match_parent"/>

	<android.support.v7.widget.AppCompatSpinner
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/activity_flash_sp_type"/>

	<android.support.v7.widget.AppCompatTextView
		android:layout_height="wrap_content"
		android:text="@string/flash_parttion"
		android:layout_width="match_parent"
		android:layout_marginTop="10dp"/>

	<android.support.v7.widget.AppCompatEditText
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:singleLine="false"
		android:id="@+id/activity_flash_et_target"/>

	
	<android.support.v7.widget.AppCompatCheckBox
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_gravity="left|center"
		android:text="@string/flash_auto_reboot"
		android:id="@+id/activity_flash_cb_auto_reboot"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:layout_marginTop="10dp">

		<android.support.v7.widget.AppCompatButton
			android:layout_height="wrap_content"
			android:text="@string/flash_select"
			android:layout_width="wrap_content"
			android:layout_weight="1.0"
			android:layout_margin="10dp"
			android:id="@+id/activity_flash_bt_select"/>

		<android.support.v7.widget.AppCompatButton
			android:layout_height="wrap_content"
			android:text="@string/flash_do"
			android:layout_width="wrap_content"
			android:layout_weight="1.0"
			android:layout_margin="10dp"
			android:id="@+id/activity_flash_bt_do_flash"/>

	</LinearLayout>

</LinearLayout>

