<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:layout_margin="10dp">

	<android.support.v7.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/feedback_contact"/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/activity_feedback_et_contact"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:maxLines="1"/>

	<android.support.v7.widget.AppCompatTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/feedback_content"
		android:layout_marginTop="15dp"/>

	<android.support.v7.widget.AppCompatEditText
		android:id="@+id/activity_feedback_et_content"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:maxLines="50"/>

	<android.support.v7.widget.AppCompatButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/feedback_send"
		android:layout_marginTop="40dp"
		android:id="@+id/activity_feedback_bt_do_feedback"/>

</LinearLayout>

